--- a/app/src/main/res/drawable/bg_alipay.xml
+++ b/app/src/main/res/drawable/bg_alipay.xml
@@ -5,8 +5,7 @@
 
     <stroke
         android:width="1.0px"
-        android:color="#ee3939"
-        />
+        android:color="#ee3939" />
     <corners android:radius="8dp" />
 
 
